kubernetes_resources/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: aro-rp
  name: aro-rp
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
