kubernetes_resources/monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitor
  namespace: aro-rp
  labels:
    app: monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitor
  template:
    metadata:
      labels:
        app: monitor
    spec:
      containers:
      - name: monitor
        image: marchesaro.azurecr.io/aro:581147f
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        resources:
          limits:
            memory: "2G"
        command: ["/bin/sh", "-c", "env && aro monitor"]
