kubernetes_resources/rp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aro-rp
  namespace: aro-rp
  labels:
    app: aro-rp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aro-rp
  template:
    metadata:
      labels:
        app: aro-rp
    spec:
      containers:
      - name: aro
        image: marchesaro.azurecr.io/aro:581147f
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        resources:
          limits:
            memory: "2G"
        command: ["/bin/sh", "-c", "env && aro rp"]
        volumeMounts:
          - mountPath: /etc/aro-rp/admin-ca-bundle.pem
            name: ca-bundles
            subPath: admin-api-ca-bundle
            readOnly: true
      volumes:
        - name: ca-bundles
          secret:
            secretName: ca-bundles
