kubernetes_resources/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: aro-rp-svc
spec:
  type: ClusterIP
  ports:
  - port: 8443
  selector:
    app: aro-rp
